[CODE - 1040] UI: fixed dropdown option text going outside visible area (#838)

--- a/web/src/pages/Compare/CompareContentHeader/CompareContentHeader.module.scss
+++ b/web/src/pages/Compare/CompareContentHeader/CompareContentHeader.module.scss
@@ -51,6 +51,7 @@
       line-height: 16px;
       margin: 5px 0;
       max-width: 320px;
+      white-space: pre-wrap;
     }
   }
 }
